src/main/resources/Krakatau-master/tests/assembler/bad/badrawref.j
.class public whocares
.super java/lang/Object
.const [65536] = Int 444
.end class
